# deal.ii-course-practice

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  base__block__problem_8cc.html  base__block__problem_8cc_source.html  base__block__problem_8h.html  base__block__problem_8h_source.html  base__problem_8cc.html  base__problem_8cc_source.html  base__problem_8h.html  base__problem_8h.js  base__problem_8h_source.html  class_base_block_problem-members.html  class_base_block_problem.html  class_base_block_problem.js  class_base_block_problem_tester.html  class_base_problem-members.html  class_base_problem.html  class_base_problem.js  class_base_problem_tester.html  class_linear_elasticity-members.html  class_linear_elasticity.html  class_linear_elasticity.js  class_linear_elasticity_tester.html  class_poisson-members.html  class_poisson.html  class_poisson.js  class_poisson_tester-members.html  class_poisson_tester.html  class_poisson_tester.js  class_stokes-members.html  class_stokes.html  class_stokes.js  class_stokes_tester.html  classes.html  dir_37bdb9d2191b5493db509660c6a8c15a.html  (+53 more)
.scripts/: check_indentation.sh  dr.sh  indent
CCTest_file/: step-18.cc  step-19.cc  step-26.cc  step-42.cc  step-50.cc  step-59.cc  step-6.cc  step-63.cc
Testlab/: automatic_and_symbolic_differentiation_0_T.h  merge.cc  wrapcomments.py
build-container/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  gtest  gtest[1]_include.cmake  gtest[1]_tests.cmake  linear.prm  peak.prm  (+15 more)
(+437 files in other folders)
